avance  app georep

--- a/src/views/partials/menumain.html
+++ b/src/views/partials/menumain.html
@@ -4,15 +4,7 @@
  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
  <!-- Compiled and minified JavaScript -->
  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
-         
- <div class="navbar-fixed">
-    <nav class=" blue-grey ">
-        <a href="#" class="brand-logo center">  <img src="https://www.medellin.gov.co/irj/go/km/docs/etc/PortalMedellin/images/medellin.png" alt="" class="responsive-img" height="100" width="100"></a>
-    </nav>
-</div>
-
-          
-
+ 
 <div class="fixed-action-btn">
     <a class="btn-floating btn-large red sidenav-trigger" data-target="menu-side">
       <i class="large material-icons">menu</i>
@@ -20,7 +12,7 @@
     <ul>
       <li><a class="btn-floating light-blue darken-4"><i class="material-icons">insert_chart</i></a></li>
       <li><a class="btn-floating light-green darken-4" href="/desagregacion" ><i class="material-icons">people</i></a></li>
-      <li><a class="btn-floating teal darken-1" href="/georref"><i class="material-icons">add_location</i></a></li>
+      <li><a class="btn-floating teal darken-1" href="/report/georref"><i class="material-icons">add_location</i></a></li>
       <li><a class="btn-floating blue" href="/"> <i class="material-icons circle    orange accent-3">home</i></a>   </li>
    
     </ul>
@@ -44,7 +36,8 @@
                 <img src="https://www.medellin.gov.co/irj/go/km/docs/etc/PortalMedellin/images/medellin.png" alt="" class="responsive-img" height="300" width="310">
                </a>
                <a href="">
-                 <h1 class="name white-text darken-4" style="font-size:20px;"> Julio César Mendoza    <span class="email white-text darken-4"style="font-size:14px;">juliomendoza.medellin@gmail.com</span></h1>   
+                 <h1 class="name white-text darken-4" style="text-align: left ;font-size: 14px;line-height: 20px;font-weight: 250; font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;"> Julio César Mendoza <span class="email white-text darken-4" 
+                    style="text-align: left ;font-size: 14px;line-height: 20px;font-weight: 250; font-family: 'Helvetica Neue', Roboto, Arial, 'Droid Sans', sans-serif;">juliomendoza.medellin@gmail.com</span></h1>   
                </a>
           
            </div>
@@ -57,7 +50,7 @@
        </li>
        
        <li class="collection-item avatar">
-            <a href="/georref">
+            <a href="/report/georref">
             <i class="material-icons circle  red darken-3">add_location</i>
             <span class="title"> Proyectos georreferenciados </span> 
         </a>
